--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -618,14 +618,14 @@ input, select, textarea {
 		margin-bottom: 1em;
 	}
 
-/* Audio */
+/* Audio
 .audio-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-/* Songs */
+ */
+/* Songs
 #songs {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -661,7 +661,7 @@ input, select, textarea {
   background-color: #98c593;
   color: white;
 }
-
+ */
 /* Box */
 
 	.box {
@@ -2363,7 +2363,7 @@ input, select, textarea {
 
 			#contact .box {
 				padding: 1.5em 1.5em 2em 1.5em;
-			}
+			}font=family
 
 		}
 
